--- a/css/style.css
+++ b/css/style.css
@@ -238,9 +238,12 @@ footer a:hover {
   color: #39a7a7;
 }
 .card_width_ad{
-  min-height: 500px;
-  max-height: 500px;
+  min-height: 200px;
+  max-height: 200px;
   overflow-y:scroll;
+}
+.card_width_ad::-webkit-scrollbar {
+  display: none;
 }
   
 @media only screen and (max-width: 600px) {
